fix logo spacing

--- a/app/assets/stylesheets/components/logo.scss
+++ b/app/assets/stylesheets/components/logo.scss
@@ -8,7 +8,7 @@
   .logo-text {
     flex: 1;
     color: #cc9543;
-    text-align: center;
+    margin-left: 20px;
     text-transform: uppercase;
     font-family: $logo-font;
     letter-spacing: 0.4px;
@@ -36,6 +36,7 @@
 
   @media screen and (max-width: 480px) {
     .logo-text{
+      // margin-left: 8px;
       font-size: 1.2em;
     }
     .logo-img {
